--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,24 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<script src="https://cdn.tailwindcss.com"></script>
 
-<!-- Primary Meta Tags -->
-<title>ZERO LATENCY COMPANY</title>
-<meta name="title" content="ZERO LATENCY COMPANY">
-<meta name="description" content="ZERO LATENCY IS A ORGANISATION THAT DEVELOPS, MANAGES & FUNDS INTERNET STARTUPS.">
+		<!-- Primary Meta Tags -->
+		<title>ZERO LATENCY COMPANY</title>
+		<meta name="title" content="ZERO LATENCY COMPANY" />
+		<meta name="description" content="ZERO LATENCY IS A ORGANISATION THAT DEVELOPS, MANAGES & FUNDS INTERNET STARTUPS." />
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://zerolatency.company/">
-<meta property="og:title" content="ZERO LATENCY COMPANY">
-<meta property="og:description" content="ZERO LATENCY IS A ORGANISATION THAT DEVELOPS, MANAGES & FUNDS INTERNET STARTUPS.">
-<meta property="og:image" content="https://zerolatency.company/logo.png">
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://zerolatency.company/" />
+		<meta property="og:title" content="ZERO LATENCY COMPANY" />
+		<meta property="og:description" content="ZERO LATENCY IS A ORGANISATION THAT DEVELOPS, MANAGES & FUNDS INTERNET STARTUPS." />
+		<meta property="og:image" content="https://zerolatency.company/logo.png" />
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://zerolatency.company/">
-<meta property="twitter:title" content="ZERO LATENCY COMPANY">
-<meta property="twitter:description" content="ZERO LATENCY IS A ORGANISATION THAT DEVELOPS, MANAGES & FUNDS INTERNET STARTUPS.">
-<meta property="twitter:image" content="https://zerolatency.company/logo.png">
-
-
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://zerolatency.company/" />
+		<meta property="twitter:title" content="ZERO LATENCY COMPANY" />
+		<meta property="twitter:description" content="ZERO LATENCY IS A ORGANISATION THAT DEVELOPS, MANAGES & FUNDS INTERNET STARTUPS." />
+		<meta property="twitter:image" content="https://zerolatency.company/logo.png" />
 	</head>
 	<body>
 		<noscript>
